<resources>
    <string name="app_name">FitStreak</string>
    <string name="app_package">com.apptimistiq.android.fitstreak</string>
    <string name="home">Home</string>
    <string name="recipe">Recipes</string>
    <string name="dashboard">Dashboard</string>
    <string name="home_dest_label">Daily Goals</string>
    <string name="recipe_dest_label">Recipes</string>
    <string name="dashboard_dest_label">Dashboard</string>
    <string name="onboarding_dest_label">Onboarding</string>
    <string name="sign_in_text">Continue with email</string>
    <string name="below_sign_in_text">OR</string>
    <string name="sign_in_image_desc">A picture of aspiring fit family</string>
    <string name="home_placeholder_desc">A picture of a muscle man sprinting with background of vibrant
        and colorful rays projecting out making a circle</string>
    <string name="welcome_fragment_label">Welcome</string>
    <string name="goal_selection_label">Goals</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_text">Hello there! Excited to track your fitness journey?</string>
    <string name="goal_selection_text_value">Let\'s get started by adding some goals</string>
    <string name="step_text_value">Steps</string>
    <string name="water_text_value">Glasses</string>
    <string name="goal_selection_button_text">ALL SET</string>
    <string name="sleep_text_value">Sleep</string>
    <string name="exercise_text_value">Exercise</string>
    <string name="signup_google_button_desc">Sign in via google</string>
    <string name="signup_phone_button_desc">Sign in via phone number</string>
    <string name="goal_sel_step_icon_desc">icon to indicate step count</string>
    <string name="goal_sel_water_glass_icon_desc">icon to indicate water glass</string>
    <string name="goal_sel_exercise_icon_desc">dumbbell icon to indicate the exercise goal</string>
    <string name="goal_sel_sleep_icon_desc">icon to indicate the sleep goal</string>
    <string name="app_logo_img_desc">Image representing the app logo with a measuring
        scale on the heart</string>
    <string name="login_enter_button">Enter</string>
    <string name="welcome_image_desc">Image with a person taking calculations of different
        physical activities</string>
    <string name="permission_denial_text">This app needs the Activity recognition permission
        in order to track all your activities</string>
    <string name="activity_permission_denied">Your activities cannot be tracked as it requires permission
        for activity recognition</string>
    <string name="ok">OK</string>
    <string name="permission_rationale_dialog">The Activity recognition permission is used
        to track all your physical activities in the app</string>
    <string name="permission_dialog_accept">GRANT</string>
    <string name="permission_dialog_reject">NO THANKS</string>
    <string name="step_count_goal">stepCount</string>
    <string name="water_glasses_goal">waterGlasses</string>
    <string name="sleep_hr_goal">sleepHrs</string>
    <string name="exercise_cal_burn_goal">exerciseCal</string>
    <string name="progress_reading_separator">/</string>
    <string name="vegetarian_diet">Vegetarian</string>
    <string name="paleo_diet">Paleo</string>
    <string name="vegan_diet">Vegan</string>
    <string name="keto_diet">Ketogenic</string>
    <string name="step_goal_edit_description">Keep smashing that step goal. 10,000 steps a day
            is ideal</string>
    <string name="sleep_goal_edit_description">Get enough good night sleep. 7-9 hours
        is recommended for an average adult</string>
    <string name="exercise_goal_edit_description">Crush those calories and stay fit. Aim for anywhere
        between 2000 - 3000 calories a day</string>

    <string name="water_goal_edit_description">Hydrate your body enough. Drink at least 3-4 litres of water
                                              daily</string>

    <string name="step_goal_tag">steps a day</string>
    <string name="water_goal_tag">litres a day</string>
    <string name="exercise_goal_tag">calories a day</string>
    <string name="sleep_goal_tag">hours a day</string>
    <string name="height_info">Height</string>
    <string name="weight_info">Weight</string>
    <string name="height_info_tag">cm</string>
    <string name="weight_info_tag">kg</string>

    <string name="edit_steps">Add steps</string>
    <string name="edit_sleep">Add sleep</string>
    <string name="update_sleep">Update sleep</string>
    <string name="edit_sleep_tag">Enter sleep in hours</string>
    <string name="edit_exercise">Add exercise</string>
    <string name="edit_exercise_tag">Enter calories burnt</string>
    <string name="edit_water">Add water</string>
    <string name="edit_steps_tag">steps</string>
    <string name="edit_water_tag">litres</string>
    <string name="activity_permission_denied_transition_message">The essential permission to read and track your Activity information was denied. Do you want to rethink that decision?</string>
    <string name="retry_permission_button_text">Grant Permission</string>
    <string name="sleep">Sleep</string>
    <string name="exercise">Exercise</string>
    <string name="logout">Logout from the app</string>
    <string name="weekly_dashboard">Weekly Dashboard</string>
    <string name="steps">Steps</string>
    <string name="water">Water</string>
    <string name="edit_goal_desc">Button for editing your goal value</string>

</resources>