<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/home_dest">

    <action
        android:id="@+id/action_global_home_dest2"
        app:destination="@id/home_dest"
        app:popUpTo="@id/home_dest" />

    <fragment
        android:id="@+id/home_dest"
        android:name="com.example.android.fitstreak.ProgressTrack.DailyProgressFragment"
        android:label="@string/home_dest_label"
        tools:layout="@layout/fragment_daily_progress">
        <action
            android:id="@+id/action_home_dest_to_loginFragment"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/home_dest"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/recipe_dest"
        android:name="com.example.android.fitstreak.Recipe.RecipesFragment"
        android:label="@string/recipe_dest_label"
        tools:layout="@layout/fragment_recipes" />
    <fragment
        android:id="@+id/dashboard_dest"
        android:name="com.example.android.fitstreak.Dashboard.DashboardFragment"
        android:label="@string/dashboard_dest_label"
        tools:layout="@layout/fragment_dashboard" />
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.android.fitstreak.Onboarding.LoginFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_loginFragment_to_onboarding_flow"
            app:destination="@id/onboarding_flow" />
    </fragment>
    <navigation
        android:id="@+id/onboarding_flow"
        android:label="@string/onboarding_dest_label"
        app:startDestination="@id/welcomeFragment">
        <fragment
            android:id="@+id/welcomeFragment"
            android:name="com.example.android.fitstreak.Onboarding.WelcomeFragment"
            android:label="@string/welcome_fragment_label"
            tools:layout="@layout/fragment_welcome">
            <action
                android:id="@+id/action_welcomeFragment_to_goalSelectionFragment"
                app:destination="@id/goalSelectionFragment" />
        </fragment>
        <fragment
            android:id="@+id/goalSelectionFragment"
            android:name="com.example.android.fitstreak.Onboarding.GoalSelectionFragment"
            android:label="@string/goal_selection_label"
            tools:layout="@layout/fragment_goal_selection" />
    </navigation>

</navigation>