<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.apptimistiq.android.fitstreak.authentication.onboarding.LoginFragment">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="@dimen/signup_image_view_height"
        android:layout_marginTop="@dimen/signup_image_view_width"
        android:contentDescription="@string/sign_in_image_desc"
        android:src="@drawable/ic_sign_up_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25" />

    <Button
        android:id="@+id/sign_in_email_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/sign_in_email_button_margin"
        android:layout_marginEnd="@dimen/sign_in_email_button_margin"
        android:text="@string/sign_in_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.10" />

    <TextView
        android:id="@+id/or_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/sign_in_text_margin"
        android:text="@string/below_sign_in_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_email_button"
        app:layout_constraintVertical_bias="0.05" />

    <ImageButton
        android:id="@+id/google_sign_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/sign_in_view_margin"
        android:contentDescription="@string/signup_google_button_desc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/phone_sign_in_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/or_text"
        app:layout_constraintVertical_bias="0.25"
        app:srcCompat="@drawable/common_google_signin_btn_text_disabled" />

    <ImageButton
        android:id="@+id/phone_sign_in_button"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/sign_in_view_margin"
        android:contentDescription="@string/signup_phone_button_desc"
        app:layout_constraintBottom_toBottomOf="@+id/google_sign_in_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/google_sign_in_button"
        app:layout_constraintTop_toTopOf="@+id/google_sign_in_button"
        app:srcCompat="@drawable/fui_ic_phone_white_24dp" />
</androidx.constraintlayout.widget.ConstraintLayout>